# span2

./: .gitignore  CMakeLists.txt  README.md
include/: span2.hpp  stl_include.hpp
src/: main.cpp
